changed albums, sidebar styles, and topbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Static Storefront</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -15,12 +16,11 @@
 
     <div class="row" id="top-bar">
         <div class="col-9" style="text-align: center; padding: 2.5%">
-            <h1 style="color: white">Music Store</h1>
+            <h1 style="color: white; font-family: 'Lobster', cursive;">Marvin's Music Market</h1>
         </div>
         <div class="row">
             <div class="col-12">
-                <!-- <div class="col-3"> -->
-                <ul class="nav" style="background-color: rgba(255,255,255,.7); border-radius: 0px 0px 5px 5px;">
+                <ul class="nav" style="background-color: rgba(122,122,122,.5); border-radius: 0px 0px 5px 5px;">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
                             <iframe style="background-color: transparent; border: none; border-radius: 5px"
@@ -46,10 +46,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-link" href="#">
+                            <img src="./assets/cart.png" height="30px" />
+                        </a>
                     </li>
                 </ul>
-                <!-- </div> -->
             </div>
             <div class="col"></div>
         </div>
@@ -83,8 +84,8 @@
                                                 9. "Red"<br />
                                                 10. "Heathrow"<br />
                                                 11. "Outside"<br />
-
-                                                May 27, 2016
+                                                <br />
+                                                Released May 27, 2016
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -116,8 +117,8 @@
                                                 8. "Mirrors"<br />
                                                 9. "Ghosts"<br />
                                                 10. "Let Them In"<br />
-
-                                                November 4, 2014
+                                                <br />
+                                                Released November 4, 2014
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -150,8 +151,8 @@
                                                 9. Supersonics<br />
                                                 10. Ghost<br />
                                                 11. April<br />
-
-                                                August 30, 2019
+                                                <br />
+                                                Released August 30, 2019
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -185,7 +186,7 @@
                                                 10. fair one [prod. by desired]<br />
                                                 11. lil empathy [first beat prod. by îota, second beat prod. by
                                                 kudasai]<br />
-
+                                                <br />
                                                 Released Jan 20, 2019
                                             </p>
                                         </div>
@@ -220,8 +221,8 @@
                                                 10. Mayonaka to Mahiru no Yume (真夜中と真昼の夢 Midnight and Daydreams)<br />
                                                 11. Kaigan Dōri (海岸通り Waterfront)<br />
                                                 12. Loop & Loop (ループ&ループ Rūpu & Rūpu)<br />
-
-                                                October 20, 2004
+                                                <br />
+                                                Released October 20, 2004
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -242,25 +243,25 @@
                                 <div class="card-body cover-body">
                                     <div class="row" id="card-full">
                                         <div class="col-12" id="words">
-                                            I was workin' all week
-                                            Nothing exciting
-                                            I was waiting all week
-                                            So boring
-                                            But tonight i will come out caus
-                                            Its FRIDAY NIGHT
-                                            (INSTRUMENTAL)
-                                            I wanna keep moving
-                                            All night
-                                            I wanna dance
-                                            All night
-                                            And i wanns drink
-                                            All night
-                                            And i wanna party
-                                            All night
-                                            And i wanna enjoy thus night
-                                            Cause its
-                                            FRIDAY NIGHT
-                                            (INSTRUMENTAL)
+                                            I was workin' all week<br />
+                                            Nothing exciting<br />
+                                            I was waiting all week<br />
+                                            So boring<br />
+                                            But tonight i will come out caus<br />
+                                            Its FRIDAY NIGHT<br />
+                                            (INSTRUMENTAL)<br />
+                                            I wanna keep moving<br />
+                                            All night<br />
+                                            I wanna dance<br />
+                                            All night<br />
+                                            And i wanns drink<br />
+                                            All night<br />
+                                            And i wanna party<br />
+                                            All night<br />
+                                            And i wanna enjoy thus night<br />
+                                            Cause its<br />
+                                            FRIDAY NIGHT<br />
+                                            (INSTRUMENTAL)<br />
                                         </div>
                                         <div class="col-12">
                                             <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
@@ -271,64 +272,34 @@
                             </div>
                         </div>
 
-                        <!-- FlAMINGO -->
+                        <!-- NO FUTURE -->
                         <div class="col-3 top-mar">
                             <div class="card card-shadow">
                                 <div class="card-body fill-it-up">
-                                    <img src="./assets/flamingo.jpg" width="100%" />
+                                    <img src="./assets/nofuture.jpg" width="100%" />
                                 </div>
                                 <div class="card-body cover-body">
                                     <div class="row" id="card-full">
                                         <div class="col-12" id="words">
                                             <p>
-                                                How many shrimps do you have to eat<br />
-                                                Before you make your skin turn pink?<br />
-                                                Eat too much and you'll get sick<br />
-                                                Shrimps are pretty rich<br />
-                                                なんであいつらはピンク？<br />
-                                                動物園で思った ピンク<br />
-                                                食べ物で そうなんだ<br />
-                                                実は私はたらこが大好き<br />
-                                                プラス エビ カニ 食べよう<br />
-                                                ピンク色になるの<br />
-                                                だからみんな違う色<br />
-                                                人間って勘違いしてるよね<br />
-                                                Black, white, green or blue<br />
-                                                Show off your natural hue<br />
-                                                Flamingo, oh oh oh-woah<br />
-                                                If you're multicouloured that's cool too<br />
-                                                You don't need to change<br />
-                                                It's boring being the same<br />
-                                                Flamingo, oh oh oh-woah<br />
-                                                You're pretty either way<br />
-                                                鶴の尻尾下に向かって曲げたらフラミンゴ<br />
-                                                意味不明だけど面白いでしょう<br />
-                                                虹色に染まった世界<br />
-                                                今日も地球のどこかで<br />
-                                                エビをむしゃむしゃ食べて<br />
-                                                フラミンゴはピンク色に<br />
-                                                染まっていくぜ one two three!<br />
-                                                Black, white, green or blue<br />
-                                                Show off your natural hue<br />
-                                                Flamingo, oh oh oh-woah<br />
-                                                If you're multicouloured that's cool too<br />
-                                                You don't need to change<br />
-                                                It's boring being the same<br />
-                                                Flamingo, oh oh oh-woah<br />
-                                                You're pretty either way<br />
-                                                Flamingo<br />
-                                                How many shrimps do you have to eat<br />
-                                                Before you make your skin turn pink?<br />
-                                                Eat too much and you'll get sick<br />
-                                                Shrimps are pretty rich<br />
-                                                Green or blue<br />
-                                                Show off your natural hue<br />
-                                                Slamingo, oh oh oh-woah<br />
-                                                If you're multicouloured that's cool too<br />
-                                                You don't need to change<br />
-                                                It's boring being the same<br />
-                                                Flamingo, oh oh oh-woah<br />
-                                                You're pretty either way<br />
+                                                1. good morning <br />
+                                                2. in<br />
+                                                3. hertz<br />
+                                                4. static<br />
+                                                5. projector<br />
+                                                6. love, death, distraction<br />
+                                                7. how to sleep<br />
+                                                8. calm down<br />
+                                                9. just saying<br />
+                                                10. fomo<br />
+                                                11. so far so good<br />
+                                                12. isohelv
+                                                13. ????<br />
+                                                14. tides<br />
+                                                15. rushing<br />
+                                                16. $treams<br />
+                                                <br />
+                                                Released Feb 14, 2018
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -362,8 +333,8 @@
                                                 10. Echo of a Rose<br />
                                                 11. Saturnine (feat. keshi)<br />
                                                 12. Memories of a Dream<br />
-
-                                                released October 8, 2018
+                                                <br />
+                                                Released October 8, 2018
                                             </p>
                                         </div>
                                         <div class="col-12">
@@ -378,20 +349,20 @@
                     </div>
                 </div>
 
+                <!-- FOR SPACING -->
                 <div class="col"></div>
 
                 <!-- SIDE BAR -->
                 <div class="col-2 top-bit">
                     <div class="card" id="side-description">
                         <div class="card-body">
-                            Here is some information Here is some information Here is some information Here is some
-                            information
-                            Here is some information Here is some information Here is some information Here is some
-                            information
-                            Here is some information Here is some information Here is some information Here is some
-                            information
-                            
-                            
+                            The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets
+                            more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at
+                            the start. The running speed starts slowly but gets faster each minute after you hear this
+                            signal bodeboop. A sing lap should be completed every time you hear this sound. ding
+                            Remember to run in a straight line and run as long as possible. The second time you fail to
+                            complete a lap before the sound, your test is over. The test will begin on the word start.
+                            On your mark. Get ready!… Start.
                         </div>
                     </div>
                 </div>
