Lorem Ipsum sidebar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -356,13 +356,15 @@
                 <div class="col-2 top-bit">
                     <div class="card" id="side-description">
                         <div class="card-body">
-                            The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets
-                            more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at
-                            the start. The running speed starts slowly but gets faster each minute after you hear this
-                            signal bodeboop. A sing lap should be completed every time you hear this sound. ding
-                            Remember to run in a straight line and run as long as possible. The second time you fail to
-                            complete a lap before the sound, your test is over. The test will begin on the word start.
-                            On your mark. Get ready!… Start.
+                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
+                            of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+                            a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                            Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
+                            word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
+                            sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+                            Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
+                            popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
+                            amet..", comes from a line in section 1.10.32.
                         </div>
                     </div>
                 </div>
