only sidebar left

--- a/index.html
+++ b/index.html
@@ -89,8 +89,16 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $14.95</div>
+
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -122,8 +130,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $20.00</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -156,8 +170,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $24.96</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -191,8 +211,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: Free</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -226,8 +252,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $40.00</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -264,8 +296,14 @@
                                             (INSTRUMENTAL)<br />
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $0.99</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -303,8 +341,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: $5.00</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -338,8 +382,14 @@
                                             </p>
                                         </div>
                                         <div class="col-12">
-                                            <button style="margin-top: 7.5%" type="button" class="btn btn-dark">Buy it
-                                                now</button>
+                                            <div class="row">
+                                                <div class="col" style="padding: 5%">Price: Free</div>
+                                                <div class="col">
+                                                    <button style="margin-top: 7.5%" type="button"
+                                                        class="btn btn-dark">Buy it
+                                                        now</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
